Thu Mar 08 06:06:15 GMT 2007  Olly Betts <olly@survex.com>

	* docs/overview.html: Fix links to error classes in generated API
	  documentation.

Thu Mar 08 05:37:13 GMT 2007  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser.cc,
	  queryparser/queryparser.lemony,queryparser/queryparser_internal.h,
	  tests/queryparsertest.cc: Add the ability to parse "value ranges"
	  to the QueryParser (e.g. "10..50") which translate into a Query
	  with operator OP_VALUE_RANGE.

Thu Mar 08 04:27:54 GMT 2007  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser.cc: Remove
	  QueryParser::set_stemming_options() which has been deprecated
	  since 0.9.0.

Thu Mar 08 03:37:07 GMT 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_lock.cc: Handle write failing to send a single
	  byte down down the pipe to tell the parent we've got the lock (a
	  potential bug noticed by _FORTIFY_SOURCE!)  Handle read() failing
	  with an unexpected error on the parent side by failing the lock
	  attempt rather than risking an infinite loop.

Thu Mar 08 02:52:26 GMT 2007  Olly Betts <olly@survex.com>

	* include/xapian/types.h: Rewritten, with more accurate documentation
	  comments.  Add constant Xapian::BAD_VALUENO which is -1 cast to
	  Xapian::valueno.
	* api/omenquire.cc,include/xapian/enquire.h,matcher/multimatch.cc: Use
	  Xapian::BAD_VALUENO instead of Xapian::valueno(-1).

Thu Mar 08 01:47:08 GMT 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Try putting apidoc/html in EXTRA_DIST instead of
	  using dist-hook.

Wed Mar 07 23:16:52 GMT 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Stop shipping docs/apidoc/latex/* in the
	  xapian-core tarballs since it's just useless bloat.  Removing it
	  more than halves the size of the tarball (55% reduction!)

Wed Mar 07 22:07:31 GMT 2007  Olly Betts <olly@survex.com>

	* tests/runtest.in: If we aren't using valgrind, turn on